// =============================================================
//  Ayuda Logística BOG — MongoDB Schema
//  Formato: DBML (dbml.org) adaptado a colecciones MongoDB
//  Convenciones:
//    - _id       → ObjectId (generado por MongoDB)
//    - *_id      → ObjectId de referencia ($lookup / $in)
//    - *_nombre  → snapshot desnormalizado del nombre legible
//    - codigo    → ID legible (D-001, E-001, R-001) para UI
// =============================================================

Project ayuda_logistica_bog {
  database_type: 'MongoDB'
  Note: '''
    Sistema de gestión humanitaria para centros de acopio y despacho logístico.

    COLECCIONES: voluntarios · donaciones · envios · recepciones

    FLUJO REAL DE OPERACIÓN (corregido 2026-08-15):
      Las donaciones llegan de forma continua y acumulada — es físicamente imposible
      inventariarlas caja por caja al momento de recibirlas ("son montañas"). Por eso:

      - `donaciones` es una BITÁCORA de trazabilidad (quién donó, quién recibió, qué
        se entregó, notas) — NO es inventario y NO alimenta a `envios`.
      - El conteo real de inventario por categoría ocurre en `envios`, en el momento
        en que se carga un camión para despacho: se cuenta literalmente lo que se sube
        a ese camión. No existe una selección de donaciones individuales para armar
        un envío — cada envío hace su propio conteo independiente.
      - No hay estados intermedios tipo "pendiente/listo" — si el conteo está hecho,
        ya está listo para despachar. Guardar el envío ES la confirmación de despacho.

    PATRONES APLICADOS:
      - Embedding  → categorias_kits (sub-documento inmutable dentro de cada doc)
      - Snapshot   → nombres y códigos legibles desnormalizados para evitar $lookup
      - Sin referencias cruzadas entre donaciones/envios/recepciones — cada colección
        es independiente, excepto recepciones → envios (1:1, cierre de ciclo).

    FLUJO DE ESTADOS:
      Donación:  ninguno (registro inmutable, tipo bitácora — igual que recepción)
      Envío:     en_transito → entregado
      Recepción: (documento final — no cambia de estado)

    TRANSACCIONES:
      Al confirmar una recepción se actualiza en la misma sesión:
        envios.estado → "entregado"
      (Ya no se actualizan donaciones — no están relacionadas con el envío.)
      Usar session + multi-document transaction de MongoDB 4.0+ si se agregan más pasos.
  '''
}


// =============================================================
//  ENUMS
// =============================================================

Enum estado_envio {
  en_transito  [note: 'Despachado, en camino']
  entregado    [note: 'Recepcionado en destino']
}

Enum tipo_transporte {
  carro
  camion
  avion_vuelo
  barco
  otro
}

Enum rol_usuario {
  voluntario
  administrador
}


// =============================================================
//  EMBEDDED DOCUMENT — Categorías de kits
//  No es una colección independiente.
//  Se incrusta dentro de: donaciones · envios · recepciones
// =============================================================

Table categorias_kits [note: 'Sub-documento embebido — nunca colección independiente'] {
  aseo         int [default: 0, note: 'Aseo / Cuidado personal e higiene']
  alimentos    int [default: 0, note: 'Alimentos no perecederos']
  mascotas     int [default: 0, note: 'Alimentos para mascotas']
  medicamentos int [default: 0, note: 'Medicamentos']
  insumos      int [default: 0, note: 'Insumos médicos y hospitalarios']
  rescate      int [default: 0, note: 'Suministros de rescate']
  refugio      int [default: 0, note: 'Material de refugio (carpas, cobijas, etc.)']
  ropa         int [default: 0, note: 'Ropa y calzado']
}


// =============================================================
//  COLECCIÓN: voluntarios
// =============================================================

Table voluntarios {
  _id          ObjectId  [pk, note: 'Generado por MongoDB']
  nombre       varchar   [not null]
  documento    varchar   [not null, unique, note: 'Cédula o documento de identidad — clave de acceso']
  rol          rol_usuario [not null, default: 'voluntario']
  created_at   timestamp [default: `now()`]

  indexes {
    documento              [unique, name: 'uq_voluntarios_documento',
                            note: 'Búsqueda O(1) en login — campo de acceso principal']
    rol                    [name: 'idx_voluntarios_rol',
                            note: 'Filtrar administradores para vistas de métricas']
    (documento, rol)       [name: 'idx_voluntarios_doc_rol',
                            note: 'Cubierto (covered query) en autenticación: evita fetch del doc completo']
  }

  Note: '''
    Acceso sin contraseña — documento actúa como identificador único de sesión.
    No almacenar contraseñas ni tokens aquí en el prototipo.
  '''
}


// =============================================================
//  COLECCIÓN: donaciones
//  BITÁCORA — no es inventario, no tiene estado, no alimenta envíos.
// =============================================================

Table donaciones {
  _id               ObjectId      [pk]
  codigo            varchar       [not null, unique,
                                   note: 'ID legible D-001. Generado con contador atómico (counters collection).']

  fecha_hora        timestamp     [not null,
                                   note: 'Autocompletada con la fecha/hora actual en el form; editable por si el registro se hace después del hecho']

  donante_nombre    varchar       [not null, note: 'Nombre de quien entrega la donación — texto libre, no es un usuario del sistema']
  receptor_nombre   varchar       [not null, note: 'Nombre de quien recibe la donación en el acopio']

  categorias        categorias_kits [not null, note: 'Set de lo entregado, embebido']
  total_cajas       int             [not null, default: 0, note: 'Desnormalizado = categorias.total()']

  comentarios       varchar       [note: 'Notas libres — ej. detalles no cubiertos por las categorías']

  creado_por_id     ObjectId      [not null, note: 'Voluntario logueado que registra el ingreso (auditoría)']
  creado_por_nombre varchar       [not null, note: 'Snapshot del nombre del voluntario']

  created_at        timestamp     [default: `now()`]
  updated_at        timestamp     [default: `now()`]

  indexes {
    codigo                    [unique, name: 'uq_donaciones_codigo']
    fecha_hora                [name: 'idx_donaciones_fecha_hora', note: 'Orden cronológico de la bitácora']
    donante_nombre            [name: 'idx_donaciones_donante', note: 'Buscar historial de un donante']
  }

  Note: '''
    NO ES INVENTARIO:
      Este registro documenta que "algo entró" — quién donó, quién lo recibió y qué
      se entregó — para trazabilidad. NO se referencia desde `envios`: el conteo real
      de carga para despacho se hace de forma independiente al armar cada envío.

    SIN MÁQUINA DE ESTADOS:
      Documento inmutable una vez creado (mismo patrón que `recepciones`). No hay
      "pendiente/listo/en_transito/entregado" a nivel de donación.
  '''
}


// =============================================================
//  COLECCIÓN: envios
// =============================================================

Table envios {
  _id                ObjectId      [pk]
  codigo             varchar        [not null, unique, note: 'ID legible E-001']

  // Transporte
  tipo_transporte    tipo_transporte [not null]
  capacidad_ton      decimal        [note: 'Capacidad en toneladas — puede ser nulo si no aplica']
  empresa            varchar        [note: 'Empresa o aliado logístico — opcional']
  placa              varchar        [note: 'Placa / matrícula del vehículo o aeronave']

  // Responsable del transporte (datos del transportador, NO del voluntario)
  responsable_nombre varchar        [not null, note: 'Nombre del responsable del medio de transporte']
  contacto           varchar        [note: 'Teléfono del responsable del transporte']

  // Ruta y tiempo
  fecha_hora         timestamp      [not null, note: 'Fecha y hora de despacho']
  ciudad_origen      varchar        [not null]
  ciudad_destino     varchar        [not null]

  // Carga — conteo directo hecho al cargar ESTE camión (no agregación de donaciones)
  carga_categorias   categorias_kits [not null,
                                     note: 'Conteo por categoría entrado directamente en el formulario de envío, al cargar el camión']
  total_cajas        int             [not null, default: 0,
                                     note: 'Desnormalizado = carga_categorias.total()']

  // Control de flujo
  estado             estado_envio   [not null, default: 'en_transito']

  // Auditoría
  creado_por_id      ObjectId
  creado_por_nombre  varchar        [note: 'Snapshot del nombre del voluntario']
  created_at         timestamp      [default: `now()`]
  updated_at         timestamp      [default: `now()`]

  indexes {
    codigo                       [unique, name: 'uq_envios_codigo']
    estado                       [name: 'idx_envios_estado', note: 'Filtrar en_transito para el modal de recepciones']
    fecha_hora                   [name: 'idx_envios_fecha_hora']
    ciudad_destino                [name: 'idx_envios_destino']
    (estado, fecha_hora)         [name: 'idx_envios_estado_fecha',
                                  note: 'COMPUESTO PRINCIPAL — envíos en tránsito ordenados por fecha']
    (ciudad_origen, ciudad_destino) [name: 'idx_envios_ruta',
                                     note: 'Métricas de rutas activas y análisis de trazabilidad']
  }

  Note: '''
    CONTEO INDEPENDIENTE POR CAMIÓN:
      carga_categorias se cuenta directamente al armar este envío — no se agrega desde
      donaciones. No existe donaciones_ids ni selección de registros previos.

    CONFIRMACIÓN DE DESPACHO:
      No hay un paso separado de "check" — guardar el envío ya implica que el conteo
      quedó hecho y el camión está listo para salir (estado inicial: en_transito).
  '''
}


// =============================================================
//  COLECCIÓN: recepciones
// =============================================================

Table recepciones {
  _id                ObjectId       [pk]
  codigo             varchar         [not null, unique, note: 'ID legible R-001']

  // Receptor en destino
  receptor_nombre    varchar         [not null, note: 'Nombre de quien recibe físicamente la carga']

  // Referencia al envío que se cierra
  envio_id           ObjectId        [not null,
                                     note: 'Referencia directa — un envío solo puede tener UNA recepción (índice único)']
  envio_codigo       varchar         [not null, note: 'Snapshot del código legible del envío']

  // Snapshot de carga confirmada (inmutable)
  carga_categorias   categorias_kits [note: 'Copia exacta del snapshot del envío al momento de la recepción']
  total_cajas        int             [note: 'Desnormalizado desde el envío']

  // Verificación del transporte (puede diferir del envío si hubo cambio de vehículo)
  tipo_transporte    tipo_transporte
  capacidad_ton      decimal
  empresa            varchar         [note: 'Puede diferir si hubo cambio logístico en ruta']
  responsable_nombre varchar
  contacto           varchar
  placa              varchar         [note: 'Verificar que coincide con el envío — registrar diferencia si no']

  // Tiempo y ruta de llegada
  fecha_hora         timestamp       [not null, note: 'Fecha y hora real de llegada']
  ciudad_origen      varchar
  ciudad_destino     varchar

  // Auditoría
  creado_por_id      ObjectId
  creado_por_nombre  varchar
  created_at         timestamp       [default: `now()`]

  indexes {
    codigo            [unique, name: 'uq_recepciones_codigo']
    envio_id          [unique, name: 'uq_recepciones_envio_id',
                       note: 'CRÍTICO — garantiza que un envío no se recepcione dos veces']
    fecha_hora        [name: 'idx_recepciones_fecha_hora']
    ciudad_destino    [name: 'idx_recepciones_destino']
  }

  Note: '''
    DOCUMENTO FINAL DEL CICLO LOGÍSTICO:
      La recepción cierra el ciclo. No tiene estado propio — su existencia
      confirma la entrega.

    ÚNICA POR ENVÍO:
      El índice único en envio_id previene doble confirmación.

    TRANSACCIÓN AL CONFIRMAR RECEPCIÓN:
      1. Insert recepciones (nuevo documento)
      2. Update envios: { _id: envio_id } → estado: "entregado"
      Ambas operaciones en una sola sesión (session.withTransaction).
      Ya no se actualizan donaciones — no están relacionadas con el envío.

    DIVERGENCIA DE DATOS DEL TRANSPORTE:
      Los campos de verificación (placa, responsable, etc.) pueden diferir
      de los del envío si hubo cambio de vehículo en ruta.
      Conservar ambos registros para auditoría.
  '''
}


// =============================================================
//  REFERENCIAS ENTRE COLECCIONES (para diagrama ER)
//  Definidas aquí de forma centralizada — NO repetir inline en columnas.
//  Operadores: >  many-to-one  |  <  one-to-many  |  -  one-to-one
// =============================================================

// Muchas donaciones → un voluntario las registra (solo auditoría, sin efecto en inventario)
Ref ref_donaciones_creador: donaciones.creado_por_id > voluntarios._id

// Muchos envíos → un voluntario los registra
Ref ref_envios_creador: envios.creado_por_id > voluntarios._id

// Muchas recepciones → un voluntario las registra
Ref ref_recepciones_creador: recepciones.creado_por_id > voluntarios._id

// Una recepción cierra exactamente un envío (1:1)
Ref ref_recepciones_envio: recepciones.envio_id - envios._id

// Nota: `donaciones` NO tiene relación con `envios` — son colecciones independientes.
// El conteo de carga de cada envío se hace directamente en el formulario de envío.


// =============================================================
//  NOTAS GENERALES DE IMPLEMENTACIÓN MONGODB
// =============================================================

// ÍNDICES DE CREACIÓN (ver backend/app/db/indexes.py — fuente de verdad):
// donaciones.createIndex({ codigo: 1 }, { unique: true })
// donaciones.createIndex({ fecha_hora: -1 })
// donaciones.createIndex({ donante_nombre: 1 })
// envios.createIndex({ estado: 1, fecha_hora: -1 })       // más usado
// recepciones.createIndex({ envio_id: 1 }, { unique: true })

// WRITE CONCERN recomendado para operaciones críticas (recepciones):
// { w: "majority", j: true }

// Contador atómico de códigos legibles (D-00N, E-00N, R-00N):
// counters.findOneAndUpdate({ _id: prefix }, { $inc: { seq: 1 } }, { upsert: true })
